force-app/main/default/objects/Contract/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business unit code value from Opportunity owner for integration</description>
    <formula>IF(Opportunity__r.Profit_Center_Code__c != &apos;&apos;,Opportunity__r.Profit_Center_Code__c,&apos;&apos;)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>