force-app/main/default/objects/Contract/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <description>Chargeable field used for integration</description>
    <formula>IF(
TEXT(Opportunity__r.Order_type__c) == &apos;Normal&apos;, 
IF(Opportunity__r.Project_Number__r.Chargeable__c = TRUE ,&apos;chargeable&apos;,&apos;non-chargeable&apos;), 

IF(TEXT(Opportunity__r.Order_type__c) == &apos;Reclamation&apos;,
IF(TEXT(Opportunity__r.Case__r.Process_Class__c) == &apos;Additional_order_11&apos;,&apos;chargeable&apos;,&apos;non-chargeable&apos;),&apos;&apos;))</formula>
    <label>Chargeable OLD</label>
    <type>Text</type>
</CustomField>