force-app/main/default/objects/Contract/fields/Contract_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Message_Status__c</fullName>
    <description>Status of contract message to ERP</description>
    <formula>IF(Is_Frends_JSON_Processed__c,
IMAGE(&apos;/img/msg_icons/confirm32.png&apos;,&apos;SUCCESS&apos;,20,20),
IMAGE(&apos;/img/msg_icons/error32.png&apos;,&apos;ERROR&apos;,20,20)
)</formula>
    <label>Contract Message Status OLD</label>
    <type>Text</type>
</CustomField>