force-app/main/default/objects/Contract/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <description>this defines contract type</description>
    <inlineHelpText>please mark contract type</inlineHelpText>
    <label>Contract type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Contract</fullName>
            </value>
            <value>
                <fullName>Final Contract</fullName>
                <default>true</default>
                <label>Final Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>