force-app/main/default/objects/Contract/fields/ContractMessageStatusIcon__c.field-meta.xml
<CustomField>
    <fullName>ContractMessageStatusIcon__c</fullName>
    <description>Status of the Contract Message send by Salesforce to Maintori</description>
    <formula>IF(Is_Frends_JSON_Processed__c,
IMAGE(&apos;/img/msg_icons/confirm32.png&apos;,&apos;SUCCESS&apos;,20,20),
IMAGE(&apos;/img/msg_icons/error32.png&apos;,&apos;ERROR&apos;,20,20)
)</formula>
    <inlineHelpText>Status of the Contract Message send by Salesforce to Maintori</inlineHelpText>
    <label>Contract Message Status</label>
    <type>Text</type>
</CustomField>