force-app/main/default/objects/Contract/fields/Customer_reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference__c</fullName>
    <description>customer reference, field on invoice</description>
    <formula>IF(Quote__r.CustomerReference__c != &apos;&apos;, Quote__r.CustomerReference__c,&apos;&apos;)</formula>
    <inlineHelpText>This customer reference information is shown on invoice</inlineHelpText>
    <label>Customer reference</label>
    <type>Text</type>
</CustomField>