force-app/main/default/objects/Contract/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Customer segment code from Opportunity</description>
    <formula>TEXT(Opportunity__r.Customer_Segment__c)</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>