force-app/main/default/objects/Contract/fields/Customer_segment_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_segment_name__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;1000&quot;),&apos;Consumer Apartment Building&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;1100&quot;),&apos;Consumer Single House&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;4000&quot;),&apos;Project construction&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;4100&quot;),&apos;Project renovation&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;9000&quot;),&apos;Reseller project&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;9100&quot;),&apos;Reseller consumer&apos;,
IF(ISPICKVAL(Opportunity__r.Customer_Segment__c , &quot;100&quot;),&apos;Other&apos;,
NULL)))))))</formula>
    <label>Customer segment name</label>
    <type>Text</type>
</CustomField>