force-app/main/default/objects/Contract/fields/CustomerSegmentAttribute__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegmentAttribute__c</fullName>
    <formula>TEXT(CustomerSegment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment Attribute</label>
    <type>Text</type>
</CustomField>