force-app/main/default/objects/Contract/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Promised Date from Quote</description>
    <formula>IF(TEXT(DATEVALUE(Opportunity__r.Preliminary_installation_time__c)) != &apos;&apos;,
TEXT(DATEVALUE(Opportunity__r.Preliminary_installation_time__c)),&apos;&apos;)</formula>
    <label>Delivery Date OLD</label>
    <type>Text</type>
</CustomField>