force-app/main/default/objects/Contract/fields/Delivery_week__c.field-meta.xml
<CustomField>
    <fullName>Delivery_week__c</fullName>
    <description>Delivery week from Delivery Date</description>
    <formula>IF(TEXT(Opportunity__r.Delivery_Date__c) != &apos;&apos;, 
TEXT(YEAR( Opportunity__r.Delivery_Date__c )) &amp; &quot;/&quot; &amp; 
TEXT
(IF( CEILING(( Opportunity__r.Delivery_Date__c  - DATE( YEAR( Opportunity__r.Delivery_Date__c ), 1, 1) + 1) / 7) &gt; 52,52,
CEILING( ( Opportunity__r.Delivery_Date__c - DATE( YEAR( Opportunity__r.Delivery_Date__c ), 1, 1) + 1) / 7)
))
,&apos;&apos;)</formula>
    <label>Delivery week OLD</label>
    <type>Text</type>
</CustomField>