force-app/main/default/objects/Contract/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Message from ERP OLD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>