force-app/main/default/objects/Contract/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <description>Factory value chosen from quote</description>
    <formula>IF(Opportunity__r.Factory__c != NULL, Opportunity__r.Factory__r.Factory_code__c,&apos;&apos;)</formula>
    <label>Factory</label>
    <type>Text</type>
</CustomField>