force-app/main/default/objects/Contract/fields/Is_Frends_JSON_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Frends_JSON_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Frends JSON Processed</label>
    <type>Checkbox</type>
</CustomField>