force-app/main/default/objects/Contract/fields/Main_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Main_Contractor__c</fullName>
    <description>Main Contractor from Opportunity</description>
    <formula>IF(Opportunity__r.Main_Contractor__c = TRUE ,&apos;Yes&apos;,
IF(Opportunity__r.Main_Contractor__c = FALSE,&apos;No&apos;,&apos;No&apos;))</formula>
    <label>Main Contractor</label>
    <type>Text</type>
</CustomField>