force-app/main/default/objects/Contract/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to populate Opportunity data to contract - Integration purpose</description>
    <inlineHelpText>This is the related opportunity</inlineHelpText>
    <label>Opportunity OLD</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>ContractsOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>