force-app/main/default/objects/Contract/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Order number for integration from Opportunity</description>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>