force-app/main/default/objects/Contract/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <formula>TEXT(Opportunity__r.Order_type__c)</formula>
    <label>Order type OLD</label>
    <type>Text</type>
</CustomField>