force-app/main/default/objects/Contract/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization populated from Opportunity</description>
    <formula>Opportunity__r.Organization_Attribute__c</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>