force-app/main/default/objects/Contract/fields/Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Owner_Address__c</fullName>
    <formula>Owner.Street
&amp;BR() +
Owner.PostalCode
&amp;BR() +
Owner.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Address OLD</label>
    <type>Text</type>
</CustomField>