force-app/main/default/objects/Contract/fields/Owner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company_Name__c</fullName>
    <formula>Owner.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Company Name</label>
    <type>Text</type>
</CustomField>