force-app/main/default/objects/Contract/fields/Owner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mobile__c</fullName>
    <formula>Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile OLD</label>
    <type>Text</type>
</CustomField>