force-app/main/default/objects/Contract/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <description>Parent project value for subproject used for integration</description>
    <formula>IF(Opportunity__r.Parent_Project__c != NULL, Opportunity__r.Project_Number__r.Parent_Project__r.Project_Value__c  ,&apos;&apos;)</formula>
    <label>Parent Project</label>
    <type>Text</type>
</CustomField>