force-app/main/default/objects/Contract/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment Methods accepted by Lumon</description>
    <inlineHelpText>Payment Methods accepted by Lumon</inlineHelpText>
    <label>Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>