force-app/main/default/objects/Contract/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Payment term used for pricing</description>
    <formula>IF(TEXT(Opportunity__r.Terms_of_Payment__c) != &apos;&apos;, LEFT(TEXT(Opportunity__r.Terms_of_Payment__c),2),&apos;&apos;)</formula>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>