force-app/main/default/objects/Contract/fields/Preliminary_Contract_Reason__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Reason__c</fullName>
    <formula>Text(Opportunity__r.Reason_for_preliminary_contract__c)</formula>
    <inlineHelpText>This field is automatically populated by opportunity data</inlineHelpText>
    <label>Preliminary Contract Reason</label>
    <type>Text</type>
</CustomField>