force-app/main/default/objects/Contract/fields/Preliminary_Contract_Reason_Details2__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Reason_Details2__c</fullName>
    <description>This Field allows additional text on Preliminary Contract Reasons.
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please fill in more Preliminary Contract Details.</inlineHelpText>
    <label>Preliminary Contract Reason Details2</label>
    <type>TextArea</type>
</CustomField>