force-app/main/default/objects/Contract/fields/Preliminary_Contract_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Reason_Details__c</fullName>
    <formula>Opportunity__r.Preliminary_Contract_Reason_Details__c</formula>
    <inlineHelpText>this field is autopopulated by opportunity data</inlineHelpText>
    <label>Preliminary Contract Reason Details OLD</label>
    <type>Text</type>
</CustomField>