force-app/main/default/objects/Contract/fields/PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Name__c</fullName>
    <description>Pricebook used for Quote. Field used only for integration</description>
    <formula>Opportunity__r.Pricebook2.Name</formula>
    <label>PriceBook Name</label>
    <type>Text</type>
</CustomField>