force-app/main/default/objects/Contract/fields/ProfitCenterOLD__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenterOLD__c</fullName>
    <label>ProfitCenterOLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>