force-app/main/default/objects/Contract/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <description>Project category from Opportunity&apos;s project for integration</description>
    <formula>TEXT(Opportunity__r.Project_Number__r.Project_Category__c)</formula>
    <label>Project Category</label>
    <type>Text</type>
</CustomField>