force-app/main/default/objects/Contract/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <description>Project group value for integration from Opportunity/Project</description>
    <formula>TEXT(Opportunity__r.Project_Number__r.Project_Group__c)</formula>
    <label>Project Group</label>
    <type>Text</type>
</CustomField>