force-app/main/default/objects/Contract/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <description>Project number from Opportunity used for Integration</description>
    <formula>Opportunity__r.Project_Number__r.Project_Value__c</formula>
    <label>Opportunity Project OLD</label>
    <type>Text</type>
</CustomField>