force-app/main/default/objects/Contract/fields/Reason_for_preliminary_contract__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_preliminary_contract__c</fullName>
    <description>NOT IN USE This indicates why preliminary contract has been made instead of the final contract</description>
    <inlineHelpText>Please mark the preliminary contract reason here</inlineHelpText>
    <label>Reason for Preliminary Contract OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>2nd Measurement Needed</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Building Permit Needed</fullName>
                <isActive>false</isActive>
                <label>Building Permit Needed</label>
            </value>
            <value>
                <fullName>Special Order Handling</fullName>
                <isActive>false</isActive>
                <label>Special Order Handling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>