force-app/main/default/objects/Contract/fields/Sales_reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_reference__c</fullName>
    <description>Sales Reference/Order number for integration from Opportunity</description>
    <formula>Opportunity__r.Sales_reference__c</formula>
    <label>Sales reference</label>
    <type>Text</type>
</CustomField>