force-app/main/default/objects/Contract/fields/ServiceAttribute__c.field-meta.xml
<CustomField>
    <fullName>ServiceAttribute__c</fullName>
    <formula>SUBSTITUTE(TRIM(
IF(NOT(ISBLANK(CountryAttribute__c )),CountryAttribute__c ,&apos;&apos;)
+IF(NOT(ISBLANK( ProfitCenterAttribute__c )),&apos;_&apos;+ProfitCenterAttribute__c ,&apos;&apos;)

+IF (NOT(ISBLANK( CustomerSegmentAttribute__c )),&apos;_&apos;+CustomerSegmentAttribute__c ,&apos;&apos;)

),&apos; &apos;, &apos;_&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Attribute</label>
    <type>Text</type>
</CustomField>