force-app/main/default/objects/Contract/fields/Work_Number_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Number_Name__c</fullName>
    <description>Work Number Name from Quote for Integration</description>
    <formula>Quote__r.Work_Number_Name__c</formula>
    <label>Work Number Name</label>
    <type>Text</type>
</CustomField>