force-app/main/default/objects/Contract/recordTypes/Final_Contract.recordType-meta.xml
<RecordType>
    <fullName>Final_Contract</fullName>
    <active>true</active>
    <description>This contract is order contract which also implies that customer has 5 year warranty</description>
    <label>Final Contract</label>
</RecordType>