force-app/main/default/objects/Contract/recordTypes/Preliminary_Contract.recordType-meta.xml
<RecordType>
    <fullName>Preliminary_Contract</fullName>
    <active>false</active>
    <description>This is preliminary contract record type in situations when final contract cannot be made</description>
    <label>Preliminary Contract</label>
</RecordType>