force-app/main/default/objects/Contract/validationRules/Delivery_Date_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Date_Needed</fullName>
    <active>false</active>
    <description>Delivery Date value to be filled in before moving the contract to signed status</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
AND(OR( 
ISPICKVAL(Status,&apos;Signed&apos;),
ISPICKVAL(Status,&apos;Activated&apos;)
), ISBLANK(Delivery_Date__c))</errorConditionFormula>
    <errorMessage>Opportunity Delivery Date cannot be empty</errorMessage>
</ValidationRule>