force-app/main/default/objects/Contract/validationRules/Preliminary_Contract_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Preliminary_Contract_Reason_Mandatory</fullName>
    <active>false</active>
    <description>This validation ensures that a preliminary contract detailed reason is captured when other reason is given before it can be saved.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(   Preliminary_Contract_Reason__c))  , 
ISBLANK(  Preliminary_Contract_Reason_Details__c )
)</errorConditionFormula>
    <errorMessage>Please provide more details.</errorMessage>
</ValidationRule>