force-app/main/default/objects/Contract/listViews/Preliminary_Contract.listView-meta.xml
<ListView>
    <fullName>Preliminary_Contract</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_type__c</field>
        <operation>equals</operation>
        <value>Preliminary Contract</value>
    </filters>
    <label>Preliminary Contract</label>
</ListView>